# nighthawk

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.rs
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
crates/nighthawk-cli/: Cargo.toml
crates/nighthawk-cli/src/: daemon_ctl.rs  main.rs  paths.rs  setup.rs
crates/nighthawk-daemon/: Cargo.toml
crates/nighthawk-daemon/src/: config.rs  fuzzy.rs  lib.rs  main.rs  server.rs
crates/nighthawk-daemon/src/engine/: history.rs  mod.rs  specs.rs  tier.rs
crates/nighthawk-daemon/src/history/: file.rs  mod.rs
crates/nighthawk-daemon/src/specs/: fig.rs  helpparse.rs  mod.rs
crates/nighthawk-daemon/tests/: integration.rs
crates/nighthawk-proto/: Cargo.toml
crates/nighthawk-proto/src/: lib.rs
shells/: nighthawk.bash  nighthawk.fish  nighthawk.ps1  nighthawk.zsh
shells/tests/: async.test.zsh  converters.Tests.ps1  helpers.test.bash  helpers.test.fish  highlight_memo_test.zsh  offsets.test.zsh
specs/: act.json  adb.json  adr.json  afplay.json  aftman.json  ag.json  agrippa.json  airflow.json  aliases.json  amplify.json  ampx.json  ansible-config.json  ansible-doc.json  ansible-galaxy.json  ansible-lint.json  ansible-playbook.json  ansible.json  ant.json  appwrite.json  apt.json  arch.json  arduino-cli.json  argo.json  asar.json  asciinema.json  asdf.json  asr.json  assimp.json  astro.json  atlas.json  atuin.json  authchanger.json  autocannon.json  autojump.json  aws-vault.json  aws.json  awsume.json  babel.json  banner.json  barnard59.json  (+647 more)
src/: lib.rs
src/cli/: config_ui.rs  daemon_ctl.rs  embedded_specs.rs  mod.rs  paths.rs  setup.rs
src/daemon/: config.rs  fuzzy.rs  mod.rs  server.rs
src/daemon/engine/: cloud.rs  history.rs  llm.rs  mod.rs  specs.rs  tier.rs
src/daemon/history/: file.rs
src/daemon/specs/: fig.rs  helpparse.rs  mod.rs
src/proto/: mod.rs
tests/: e2e_edge_cases.sh  e2e_fuzzy.sh  integration.rs
tools/fig-converter/: convert.mjs  package-lock.json  package.json
