[package]
name = "nighthawk"
version = "0.1.1"
edition = "2021"
build = "build.rs"
license = "MIT"
repository = "https://github.com/SushaanthSrinivasan/nighthawk"
homepage = "https://github.com/SushaanthSrinivasan/nighthawk"
keywords = ["terminal", "autocomplete", "shell", "cli", "completions"]
categories = ["command-line-utilities"]
description = "AI terminal autocomplete — zero config, zero login, zero telemetry"

[lib]
name = "nighthawk"
path = "src/lib.rs"

[[bin]]
name = "nh"
path = "src/bin/nh.rs"

[[bin]]
name = "nighthawk-daemon"
path = "src/bin/nighthawk_daemon.rs"

[features]
default = []
local-llm = ["reqwest"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
interprocess = { version = "2", features = ["tokio"] }
clap = { version = "4", features = ["derive"] }
dirs = "6"
toml = "0.8"
thiserror = "2"
async-trait = "0.1"
parking_lot = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"], optional = true }
flate2 = "1"
tar = "0.4"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[build-dependencies]
flate2 = "1"
tar = "0.4"

[dev-dependencies]
tempfile = "3"
