[package]
name = "nighthawk-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI tool for managing the nighthawk daemon"

[[bin]]
name = "nh"
path = "src/main.rs"

[dependencies]
nighthawk-proto.workspace = true
serde_json.workspace = true
clap.workspace = true
interprocess.workspace = true
