[package]
name = "nighthawk"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "AI terminal autocomplete — zero config, zero login, zero telemetry"

[[bin]]
name = "nh"
path = "src/main.rs"

[[bin]]
name = "nighthawk-daemon"
path = "src/bin/nighthawk-daemon.rs"

[dependencies]
nighthawk-proto.workspace = true
nighthawk-daemon = { path = "../nighthawk-daemon", version = "0.1.0" }
serde_json.workspace = true
clap.workspace = true
interprocess.workspace = true
dirs.workspace = true
tokio.workspace = true
