[package]
name = "nighthawk-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Background daemon for nighthawk terminal autocomplete"

[[bin]]
name = "nighthawk-daemon"
path = "src/main.rs"

[dependencies]
nighthawk-proto.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
interprocess.workspace = true
dirs.workspace = true
toml.workspace = true
thiserror.workspace = true
async-trait.workspace = true
parking_lot = "0.12"

[dev-dependencies]
tempfile = "3"
